# waffle

./: CMakeLists.txt
cmake/Modules/: WaffleDefineCompilerFlags.cmake  WaffleDefineInternalOptions.cmake  WaffleDefineOS.cmake  WaffleFindDependencies.cmake  WaffleValidateOptions.cmake
examples/: CMakeLists.txt  gl_basic.c
include/waffle/: waffle.h
src/utils/: CMakeLists.txt
src/waffle/: CMakeLists.txt
src/waffle/api/: waffle_init.c
src/waffle/core/: wcore_tinfo.c  wcore_util.c
src/waffle/egl/: wegl_platform.c
src/waffle/switch_egl/: swegl_display.c  swegl_display.h  swegl_platform.c  swegl_platform.h  swegl_window.c  swegl_window.h
